refactor: 서비스 메서드 리펙터링